@@ -1,15 +1,15 @@
 Package: BIOdry
 Type: Package
 Title: Multilevel Modeling of Dendroclimatical Fluctuations
-Version: 0.5
+Version: 0.6
 Author: Wilson Lara <wilarhen@gmail.com>, Felipe Bravo <fbravo@pvs.uva.es>
-Date: 2017-04-19
+Date: 2019-05-28
 Maintainer: Wilson Lara <wilarhen@gmail.com>
 Description: Multilevel ecological data series (MEDS) are sequences of observations ordered according to temporal/spatial hierarchies that are defined by sample designs, with sample variability confined to ecological factors. Dendroclimatic MEDS of tree rings and climate are modeled into normalized fluctuations of tree growth and aridity.  Modeled fluctuations (model frames) are compared with Mantel correlograms on multiple levels defined by sample design. Package implementation can be understood by running examples in modelFrame(), and muleMan() functions. 
 License: GPL-3
 Depends: nlme, ecodist
 LazyData: TRUE
 NeedsCompilation: no
-Packaged: 2017-04-19 10:51:13 UTC; wilar
+Packaged: 2019-05-28 20:01:49 UTC; wilar
 Repository: CRAN
-Date/Publication: 2017-04-20 08:42:57 UTC
+Date/Publication: 2019-05-28 20:30:02 UTC
