@@ -1,36 +1,36 @@
-3779d0bb9e06689c6d93c7760aef4f5e *DESCRIPTION
+da3204bbc84eb5fec8f42553f8f9ca6b *DESCRIPTION
 89f20d5fadf333e89ca17d05a87b306e *NAMESPACE
-6e6e479f3eca6c3cbdf773074ee2a3a2 *NEWS
+851ea75eea6be19f37120015247a2bcd *NEWS
 90becd47207ecf5ea48550ed8e59d42c *R/amod.R
 f19a6a0cb182225ef2c1a20df2a4ba7a *R/anova.modelFrame.R
 d585dcb836dccbd621da42477e4dac5f *R/arguSelect.R
 6b75e3e6075c0e2743efec90f523cab8 *R/cClass.R
-b6c688da2f6045318e08f944cdac069c *R/frametoLme.R
+6462bb9401c0f39e89ef03d8bfe68f99 *R/frametoLme.R
 f5b9b2b33f5cf14e7804b8ad9c30260f *R/levexp.R
 f8ec189b4ec4a99d8412f98d0dd1c2a0 *R/lmeForm.R
 1ecaa57a5420e8fe4b451e4391425b55 *R/mUnits.R
-7dc512c06266b4c79b2c5a0e7c2e7452 *R/modelFrame.R
+f674664b5939cbd0555d956ae9356bd6 *R/modelFrame.R
 209468587ed7e1bef6198ad683722f46 *R/moveYr.R
-a4f0fde8e6460d6ff1a16781bf97d988 *R/muleMan.R
-4b9cb124897ade57edc611b7a9a124cd *R/plot.modelFrame.R
-0a4e8c8c03dd709cb6065c588e941cb9 *R/plot.muleMan.R
+9ef7a4948f641a6294ad47f6216cfb4a *R/muleMan.R
+60644e386cfb860e507dd8a91ea34ec9 *R/plot.modelFrame.R
+bfcf5f770bc1f42ede2b16c709ef84bd *R/plot.muleMan.R
 c4acf5c6246db62f0f446a70af49e9bd *R/plot.wlai.R
 e7bc306c253a4311df80c2cb9a2361a3 *R/ringApply.R
 1a0f294543afca56e517e47255f5dd09 *R/rtimes.R
 e13e50412040f0ff6434283e4f271d5c *R/scacum.R
 20bfb687d838db3b95e3c4a25c2b46f5 *R/shiftFrame.R
 f5b773820d64a08fd68f7c873b6e1b58 *R/slitFrame.R
-b5c36aeb9140da9c39ff672ad5ca0c1b *R/summary.modelFrame.R
+b7eb37bb6926e1129566f22973d862b6 *R/summary.modelFrame.R
 92cb9997717994e64f354b24901a4d71 *R/tdForm.R
 bf70a7b93dc1d0cca370c3161b36ac86 *R/wlai.R
-578c0413a1b1ed5269f3bb5403db05ab *build/partial.rdb
+abd3a6bc0397ab3bbe65e071ac3ffeb4 *build/partial.rdb
 4aba57b8c993bacef121f46c87b0bf15 *data/PTclim05.RData
 42e55584d0ab17866425eca9172571d5 *data/Pchron.RData
 e7f5c14c0f48b284bfd522473904c43c *data/Pradii03.RData
 4aceb18aaa5c83068a9334b86994865a *data/Prec.RData
 4788ea931345e90489cd8e51c8b778dc *data/Prings05.RData
 3417010c4b5e7d88c0d682d877a093eb *data/Temp.RData
-3e003c7ced845a8c99968abce1e17e35 *man/BIOdry-package.Rd
+2b159c40161826f4a417ba67cae5b4c4 *man/BIOdry-package.Rd
 7febbc0688b1f60147ff867d35a0461f *man/PTclim05.Rd
 2364b72f2ccaf1b96739b3ad923639ed *man/Pchron.Rd
 d792a8b7f9d6061e049cf74ca4b0f117 *man/Pradii03.Rd
@@ -41,21 +41,21 @@ b74a9161b8a97579b211d7254d99cfdf *man/Prings05.Rd
 960e4cbda6a2eddcb16c6b5833982129 *man/anova.modelFrame.Rd
 f6fceea99eb2fe6e1581c66ac8251c5f *man/arguSelect.Rd
 a97b06137b553d67e41b20b36e84990d *man/cClass.Rd
-d71ae5a851d2f8a3fdb125721e371f73 *man/frametoLme.Rd
+952037451c23326d13daf5a5ab62a74d *man/frametoLme.Rd
 a6ea3aa49bf0e8d908440238cf62b336 *man/levexp.Rd
 fe606ed8cfddca7fc75b1b08a8cdfa24 *man/lmeForm.Rd
 a6ef147f1d97bfb4b47e0c0a649184d5 *man/mUnits.Rd
-92745b3fe85d119286c390350d9ae6d1 *man/modelFrame.Rd
+76030d396b8f0ceaca379966d098dcee *man/modelFrame.Rd
 1bfe043854090a9c5061f67d79f23087 *man/moveYr.Rd
-3412ba68614c57c4fd0a913cda975fb3 *man/muleMan.Rd
-7b9f0ebc4cdd6efb016b1837277bd877 *man/plot.modelFrame.Rd
-a424819170bee2cef60147d25d8775e3 *man/plot.muleMan.Rd
+5bbd26b9885296ae51ad8e577e190888 *man/muleMan.Rd
+3f42346af4a9eb56c05cdfeacc5e0dcf *man/plot.modelFrame.Rd
+9b2b89bc0b53a3da6ef0b1b62a71b75f *man/plot.muleMan.Rd
 4d5bb57316119de830b77ef4866dfdda *man/plot.wlai.Rd
 b7ac3476db47e341663b06e6de80d0ba *man/ringApply.Rd
 e5fd1b144c42f8c6e0888fa5fc1d1b30 *man/rtimes.Rd
 767e907dab08e4c1e57f72a51ac5f521 *man/scacum.Rd
 2559d791717acabe962fe6d08c3b1ffe *man/shiftFrame.Rd
 d6a4def39622c11937652672f5110adf *man/slitFrame.Rd
-f2ef6447239020cb3e825bc7531c8433 *man/summary.modelFrame.Rd
+082aedf9eadee482d3600abdd2d5b9fe *man/summary.modelFrame.Rd
 f92dc1270a478e0df244ebc3322e616d *man/tdForm.Rd
 da7bfd2222da010ca6b0fd0361eb9816 *man/wlai.Rd
