@@ -1,3 +1,9 @@
+New changes in BIOdry V0.6:
+
+Examples of the functions have been changed to solve convergence
+errors.
+
+
 New changes in BIOdry V0.5:
 
 1. Five S3 methods were developed: "anova.modelFrame",
